--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Lexend+Deca:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Coral+Pixels&family=Underdog&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
+
 
 :root {
   --bg-color-light: #ffffff;
