--- a/css/dark-toggle.css
+++ b/css/dark-toggle.css
@@ -10,13 +10,27 @@
         background-color: var(--bg-color-dark);
         color: var(--text-color-dark);
     }
-    .toggle-button, .home-button {
+    .toggle-button {
+        color: var(--text-color-dark);
+    } 
+    .home-button {
         border-color: var(--text-color-dark);
         color: var(--text-color-dark);
     }
 }
 
-.toggle-button, .home-button {
+.toggle-button {
+    padding: 0.5rem 1rem;
+    background: none;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    color: var(--text-color-light);
+    transition: color 0.3s;
+    size: 1.5rem;
+}
+
+.home-button {
     padding: 0.5rem 1rem;
     background: none;
     border: 1px solid currentColor;
