--- a/css/dark-toggle.css
+++ b/css/dark-toggle.css
@@ -27,7 +27,7 @@
     cursor: pointer;
     color: var(--text-color-light);
     transition: color 0.3s;
-    size: 1.5rem;
+    font-size: 1.5rem;
 }
 
 .home-button {
