--- a/css/style.css
+++ b/css/style.css
@@ -119,3 +119,16 @@ body::before {
   );
   z-index: 999;
 }
+
+.iconHolder {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  gap: 20px;
+}
+
+.icon {
+  font-size: 1.5rem;
+  color: green;
+}
