--- a/css/style.css
+++ b/css/style.css
@@ -124,11 +124,21 @@ body::before {
   display: none;
   justify-content: center;
   align-items: center;
-  margin-top: 20px;
+  margin-top: 15px;
   gap: 20px;
+  border: none;
 }
 
 .icon {
-  font-size: 1.5rem;
+  font-size: 0.75rem;
   color: green;
+  border: none;
 }
+
+.social-button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+}
+https://github.com/TrEKi722
