--- a/css/style.css
+++ b/css/style.css
@@ -125,19 +125,18 @@ body::before {
   justify-content: center;
   align-items: center;
   margin-top: 15px;
-  gap: 20px;
-  border: none;
+  border: none !important;
 }
 
 .icon {
   font-size: 0.75rem;
   color: green;
-  border: none;
+  border: none !important;
 }
 
 .social-button {
   background-color: transparent;
-  border: none;
+  border: none !important;
   cursor: pointer;
   padding: 0;
 }
