--- a/css/dark-toggle.css
+++ b/css/dark-toggle.css
@@ -85,3 +85,9 @@ section {
     display: flex;
     gap: 10px;
 }
+
+.socials-container {
+    display: flex;
+    margin: 1rem;
+    font-size:0.80rem;
+}
