--- a/css/dark-toggle.css
+++ b/css/dark-toggle.css
@@ -74,6 +74,7 @@ section {
 
 .socials-container {
     display: flex;
-    margin-bottom: 0.5rem;
+    margin:0;
+    margin-bottom:0.5rem;
     font-size:0.80rem;
 }
