--- a/css/dark-toggle.css
+++ b/css/dark-toggle.css
@@ -75,6 +75,7 @@ section {
 .socials-container {
     display: flex;
     margin:0;
+    margin-left:-0.5rem;
     margin-bottom:0.5rem;
     font-size:0.80rem;
 }
